[package]
name = "setrixtui"
version = "0.4.2"
edition = "2024"
rust-version = "1.90"
description = "Setris/Sandtrix-style falling-sand puzzle game in the terminal"
license = "GPL-3.0-or-later"
repository = "https://github.com/Mjoyufull/Setrixtui"
keywords = ["tetris", "setris", "sandtrix", "tui", "game"]
categories = ["games", "command-line-interface"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
fastrand = "2"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tachyonfx = "0.23"
thiserror = "2"
time = "0.3.47"

[build-dependencies]

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic/nursery lints that are noisy or would change APIs
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
trivially_copy_pass_by_ref = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
missing_const_for_fn = "allow"
needless_pass_by_ref_mut = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
if_not_else = "allow"
imprecise_flops = "allow"
items_after_statements = "allow"
manual_clamp = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
no_effect_underscore_binding = "allow"
option_if_let_else = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_map_or = "allow"
unnecessary_wraps = "allow"
# Transitive deps (clap, ratatui, etc.) pull multiple versions; we don't control that
multiple_crate_versions = "allow"
